# obsidian

./: README.md  Untitled 1.canvas  Untitled 2.canvas  Untitled 2.md  Untitled 3.canvas  ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ.md
.obsidian/: app.json  community-plugins.json  graph.json  workspace-mobile.json  workspace.json
.obsidian/plugins/editing-toolbar/: data.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
.obsidian/plugins/obsidian-git/: data.json
0_Summary/: daily_summary.py
0_Summary/obsidian_summariser/: cli.py  config.py  git_utils.py  llm.py  pyproject.toml  utils.py
0_Summary/obsidian_summariser/summarizers/: daily.py
0_daily/: 2025-07-15.md
1. Notes/Java/: Gradle.md  Java Spring 기초.md  Java basic.md  Java 기초 실습.md  Java 기초.md  logs.md  구현체.md  김영한 Java 기초 실습.md
1. Notes/Java/개념/: JVM.md  Class.md  IoC (inversion of control).md  Method Declaration Components.md  Method Declaration.md  MyBatis.md  SOLID.md  다형성.md  자바 프로젝트의 구성요소.md
1_notes/: git_command.md
1_notes/Ai_data/: 사내 MCP server 만들기.md
1_notes/Ai_tool/: MCP 따라해보기.md
1_notes/DevOps/: DORA-DevOps_Research_and_Assessment.md  DevLake_logs.md
1_notes/Java/: logs.md  김영한 Java Spring 기초 실습.md
1_notes/Java/개념/: Class.md  DI (Dependency Injectyion).md  Gradle.md  (+4 more)
2_bhk/: 1. Logs - Meetings, Feelings, Action Items.md  MCP_proxy_server_refactor.excalidraw.md
2_bhk/0_task/: MUW 파악하기.md
2_bhk/개발팀 생산성 측정/: 0_First_meeting_4th_June.md
Daily/: 2025-05-28.md
Excalidraw/: Drawing 2025-07-15 23.40.10.excalidraw.md  Drawing 2025-08-07 17.53.46.excalidraw.md
Notes/Ai tool/: MCP.md
(+17 files in other folders)
